--- a/chef.html
+++ b/chef.html
@@ -2,24 +2,24 @@
 <html>
 <head>
 	<title> CHEFS </title>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
 	
 
 	<h1>
-		<font face="arial"color="GREEN"><center>OUR VALUABLE CHEFS</center></h1>
+		<font face="arial"color="#cc0066"><center>OUR VALUABLE CHEFS</center></h1><br>
+
+
+
+            <p style="font-size: 20px;"><b>Cuisines</b> is a modern and  restaurant for pushing your delicious menu to new heights. Present your food business online in an engaging way that will help win over more customers. With Cuisines, you can achieve a great result even by employing it </p><br>
 		
-    <font face="arial" color="black">
+    <center><font face="arial" color="black">
     	<pre>
-    	<img src="chef.jpg" height="500" width="1000"></pre>
+    	<img src="chef.jpg" height="500px" width="70%"></pre>
     	<pre>
-    	<img src="chef1.jpg" height="500" width="1000"></pre>
+    	<img src="chef1.jpg" height="500px" width="70%"></pre>
     	<pre>
-    	<img src="chef2.jpg" height="500" width="1000"></pre>
+    	<img src="chef2.jpg" height="500px" width="70%"></pre>
     	<pre>
-    	<img src="chef3.jpg" height="500" width="1000"></pre>
-
-
-
-<p><justify><b>Cuisines</b> is a modern and  restaurant for pushing your delicious menu to new heights. Present your food business online in an engaging way that will help win over more customers. With Cuisines, you can achieve a great result even by employing it </p>
-    </font>
+    	<img src="chef3.jpg" height="500px" width="70%"></pre></font></center>
