--- a/multires.html
+++ b/multires.html
@@ -2,32 +2,34 @@
 <html>
 <head>
 	<title>restaurant</title>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
        <h1>
 		<font face="arial"color="#b30047"><center>MULTI CUISINE RESTAURANT</center></h1>
-
-	<font face="italic" color="green" size="4">
-	<pre><a href="regres.html">USER REGISTER</a></pre>	
-	<pre><a href="gallery.html">GALLERY</a></pre>
-	<pre><a href="services.html">SERVICES</a></pre>
-	<pre><a href="chef.html">CHEFS</a></pre>
-	<pre><a href="offer.html">OFFER</a></pre>
-	<pre><a href="resfeed.html">FEEDBACK</a></pre>
-	<pre><a href="contactres.html">CONTACTUS</a></pre>
+    
+	<div class="navbar">
+	<a href="registeration.php">USER REGISTERATION</a>	
+	<a href="gallery.html">GALLERY</a>
+	<a href="services.html">SERVICES</a>
+	<a href="chef.html">CHEFS</a>
+	<a href="offer.html">OFFER</a>
+	<a href="resfeed.html">FEEDBACK</a>
+	<a href="contactres.html">CONTACTUS</a>
+</div>
 
 
 
 			<font face="arial" color="#b30047">
-    	<img src="res.jpg" height="500" width="1400">
+    	<img src="res.jpg" height="500px" width="100%" style="margin-top: 1.5em;">
 
 		
- <p><justify><b>Cuisines</b> is a modern and responsive restaurant website for pushing your delicious menu to new heights. Present your food business online in an engaging way that will help win over more customers. With Cuisines, you can achieve a great result even by employing it </p>
+<p style="margin-top: 1.5em; font-size: 20px;"><b>Cuisines</b> is a modern and responsive restaurant website for pushing your delicious menu to new heights. Present your food business online in an engaging way that will help win over more customers. With Cuisines, you can achieve a great result even by employing it </p><br>
     </font>
 	     
 
 	<h2>today offer</h2>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cupiditate harum dolore mollitia, quos corrupti? sit amet consectetur adipisicing sit amet consectetur adipisicing</p>
+	<p style="font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cupiditate harum dolore mollitia, quos corrupti? sit amet consectetur adipisicing sit amet consectetur adipisicing</p>
 	
 
 
