--- a/regres.html
+++ b/regres.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    
    <font face="Adobe Gothic std font"font color="blue"><b>
-      <marquee>WELCOME TO QATAR AIRWAYS USER LOGIN </marquee></b></font>
+      <marquee>WELCOME TO MULTI CUISINE RESTAURANT USER LOGIN </marquee></b></font>
       <style type="text/css">
       @import"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 
@@ -93,7 +93,7 @@
                           </div>
                          
                   <font face=Adobe Gothic Std" font size="3" font color="red"><b>
-                     <marquee>THANK YOU FOR VISITING, REGISTER FOR YOUR TICKETS ,HELPLINE NUMBER+91 94000 5987 6547 </marquee></b></font>
+                     <marquee>THANK YOU FOR VISITING,HELPLINE NUMBER+91 94000 5987 6547 </marquee></b></font>
                       </body>
                           </html>
                           <font face=Adobe Gothic Std" font size="3" font color="lawngreen"><b>
