--- a/resfeed.html
+++ b/resfeed.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> feedbacks </title>
+	<title> feedback </title>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
 
 
-	<h1><font face="arial" size="5"color="BLUE"><center>CUSTOMER FEED BACKS</center></h1>
+			<a href="https://limetray.com/restaurant-software/cafe-software">FEED BACK </a>
 
-
-
-		<a href="https://limetray.com/restaurant-software/cafe-software">FEED BACK </a>
-
-		
+	<h1><font face="arial" size="5"color=" #99004d"><center>CUSTOMER FEED BACKS</center></h1><br>		
   
     
-<img src="feedback.jpg" height="500" width="1500">
+  <center><img src="feedback.jpg" height="500px" width="70%"></center>
