--- a/services.html
+++ b/services.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 	<title>SERVICES</title>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
-     <font face="arial" color="blue" size="2"></font>
-     <img src="service.jpg" height="500" width="1300">
-     <font face="arial" color="green" ></font>
-     <h1> services</h1>
 
-     <p><justify><b>Cuisines</b> is a modern and responsive Bootstrap 5 restaurant website template for pushing your delicious menu to new heights. Present your food business online in an engaging way that will help win over more customers. With Cuisines, you can achieve a great result even by employing it </p>
+ <center><h1> Services</h1><br></center>
+<p style="font-size: 20px; color: #cc0066"><b>Cuisines</b> is a modern and responsive Bootstrap 5 restaurant website template for pushing your delicious menu to new heights. Present your food business online in an engaging way that will help win over more customers. With Cuisines, you can achieve a great result even by employing it </p><br>
 
-	
+
+   
+    <center> <img src="service.jpg" height="500px" width="70%" ></center>
 	
 
 </body>
