--- a/contactres.html
+++ b/contactres.html
@@ -2,36 +2,38 @@
 <html>
 <head>
 	<title>contactus</title>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
 	
 	
     <font face="arial"color="#b30047">
 
-	<h1>CONTACT US</h1>
-	<h2>CONTACTLESS ORDERING FOR
-MULTI COURSE DINING</h2>
-<img src="iconslocation.gif"><pre>4578 Marmora Road, Glasgow D04 89GR</pre>
-<pre><img src="cell.png">
-<pre>800 23456789</pre>
-<pre>10:00 am - 11:00 pm</pre>
+	<center><h1>CONTACT US</h1></center><br>
+	<marquee><h2>CONTACTLESS ORDERING FORMULTI COURSE DINING</h2></marquee><br>
+<img src="iconslocation.gif" ><br>
+<pre style="font-size: 20px;">4578 Marmora Road, Glasgow D04 89GR</pre>
+
+<pre style="font-size: 20px;">800 23456789</pre>
+<pre style="font-size: 20px;" >10:00 am - 11:00 pm</pre>
+
 
 
     
-	<font face="arial" color="violet"></font>
-	<img src="contactusres.jpg" height="500" width="1400">
+	<font face="arial" color=" #99004d"></font>
+	<center><img src="contactusres.jpg" height="450px" width="70%"></center><br>
 
-	<p>Digital menu, digital order and digital payment</p>
+	<p style="font-size: 20px;">Digital menu, digital order and digital payment</p><br>
 
-<p>Realtime feedback</p>
+<p style="font-size: 20px;">Realtime feedback</p><br>
 
-<p>Realtime menu management</p>
+<p style="font-size: 20px;">Realtime menu management</p><br>
 
-<p>Dynamic time sensitive offers and discounts</p>
+<p style="font-size: 20px;">Dynamic time sensitive offers and discounts</p><br>
 
-<p>Built-in CRM and Loyalty Program</p>
+<p style="font-size: 20px;">Built-in CRM and Loyalty Program</p><br>
 
-<p>Built-in table and reservation management</p>
+<p style="font-size: 20px;">Built-in table and reservation management</p><br>
 
 </body>
 </html>
